Update backend documentation and delete functions.
